[gd_scene load_steps=7 format=3 uid="uid://c1n8ykio0swl0"]

[ext_resource type="Script" path="res://Buildings/warehouse.gd" id="1_5y1pm"]
[ext_resource type="Texture2D" uid="uid://bo3dygk67g2sd" path="res://assets/Buildlings.png" id="2_kl8fb"]
[ext_resource type="Script" path="res://SupportScripts/moving_notifier.gd" id="3_2s8h0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ht40n"]
atlas = ExtResource("2_kl8fb")
region = Rect2(128, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_1mdxn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht40n")
}],
"loop": true,
"name": &"Building",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2b33i"]
size = Vector2(128, 92)

[node name="Warehouse" type="Area2D"]
script = ExtResource("1_5y1pm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(4, -64)
sprite_frames = SubResource("SpriteFrames_1mdxn")
animation = &"Building"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4, -47)
shape = SubResource("RectangleShape2D_2b33i")

[node name="MovingNotifier" type="Node2D" parent="."]
position = Vector2(34, -32)
script = ExtResource("3_2s8h0")

[node name="Instruction" type="Label" parent="."]
offset_left = -59.0
offset_top = -91.0
offset_right = 173.0
offset_bottom = -68.0
theme_override_font_sizes/font_size = 9
text = "Hold \"E\" to Transfer Inventory"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
